Conclusão da parte de conexão. O serviço se mantém em qualquer situação e reconecta automaticamente em caso de queda. #PLATINUM_VERSIOM
+Reorganização e limpeza do código central.